crates/rulesteward-fapolicyd/tests/snapshots/fapd-W03__canonical-trailing-comment.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W03] sev=Warning line=1 col=29 span=28..53 :: inline `# comment` after a rule - fapolicyd treats trailing `#` as a rule field (not a comment) and logs a parse error, though the rule still loads
