crates/rulesteward-fapolicyd/tests/snapshots/fapd-W03__hash-immediately-after-token.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W03] sev=Warning line=1 col=28 span=27..36 :: inline `# comment` after a rule - fapolicyd treats trailing `#` as a rule field (not a comment) and logs a parse error, though the rule still loads
