crates/rulesteward-fapolicyd/tests/snapshots/fapd-W03__inline-comment-after-legacy.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W03] sev=Warning line=1 col=39 span=38..73 :: inline `# comment` after a rule line - fapolicyd silently drops this rule
